[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reality-stats"
version = "0.1.0"
description = "Reality TV stats and analytics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "dagster",
    "dagster-webserver",
    "dash",
    "dash-ag-grid",
    "dash-cytoscape",
    "networkx",
    "pandas",
    "requests",
]
[tool.dagster]
module_name = "src.definitions"
code_location_name = "reality-stats"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]